Experiment: Small bottom margin may prevent clipping in some cases for displaying Foreigners in city
Note this happened on 1685x925 screen as reported by MikeDuk but I was not able to replicate, however, I did see only narrowest of all space in the panel (0px) so that any slight overreach would indeed cause clipping, which I simulated other ways. Then adding this margin fixed the simulation of the clipping.

--- a/freeciv-web/src/main/webapp/css/civclient.css
+++ b/freeciv-web/src/main/webapp/css/civclient.css
@@ -2856,6 +2856,7 @@ input[type="email" i], #email {
   clear: left;
   width: 95%;
   line-height:11px !important;
+  margin-bottom: 4px;  /* can prevent clipping on citizen nationality/foreigners */
 }
 #prod_descr,
 #city_dialog,
